Valida servicio, nave y si el file esta correcto, pendiente indicar visiblemente que dee elegir un file de forma obligatoria

--- a/src/app/componentes/opciones/forecast/forecast.component.css
+++ b/src/app/componentes/opciones/forecast/forecast.component.css
@@ -32,6 +32,8 @@
 .forecast-resultados {
     background: #e6e6e6;
     width: 100%;
+    max-height:100px;
+    overflow-y: scroll;
 }
 
 ul li {
